# s3py

./: .gitignore  Dockerfile  README.md  create_bucket.sh  docker-compose.yml  main.py  multistage.dockerfile  pyproject.toml  run.sh  standalone.dockerfile  test.http  upload_file_to_s3.py
scripts/: format.sh  (+1 more)
src/client/: README.md  generate_client.md  pyproject.toml
src/client/s3py_client/: __init__.py
src/client/s3py_client/api/files/: complete_upload_api_v1_complete_upload_post.py  complete_upload_api_v1_files_uploads_upload_id_multipart_post.py  delete_upload_api_v1_files_uploads_upload_id_delete.py  delete_upload_api_v1_uploads_upload_id_delete.py  get_last_part_api_v1_files_uploads_upload_id_last_part_get.py  get_last_part_api_v1_uploads_upload_id_last_part_get.py  get_parts_api_v1_files_uploads_upload_id_parts_get.py  get_parts_api_v1_uploads_upload_id_parts_get.py  get_presigned_url_api_v1_files_uploads_upload_id_parts_part_id_presigned_url_get.py  get_presigned_url_api_v1_presigned_url_get.py  (+8 more)
src/client/s3py_client/models/: __init__.py  complete_upload_api_v1_complete_upload_post_response_complete_upload_api_v1_complete_upload_post.py  complete_upload_request.py  complete_upload_response.py  delete_upload_response.py  get_presigned_url_api_v1_presigned_url_get_response_get_presigned_url_api_v1_presigned_url_get.py  health_check.py  presigned_url_response.py  start_upload_api_v1_start_upload_post_response_start_upload_api_v1_start_upload_post.py  start_upload_request.py  start_upload_response.py  upload_part_api_v1_upload_part_post_response_upload_part_api_v1_upload_part_post.py  upload_part_public.py  upload_part_request.py  upload_part_response.py  upload_response.py  upload_status.py
(+11 files in other folders)
