[project]
name = "minio-upload-file"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3[s3]>=1.39.12",
    "boto3-stubs[s3]>=1.39.12",
    "httpx>=0.28.1",
    "minio>=7.2.16",
    "pydantic>=2.11.7",
    "ruff>=0.12.5",
    "sqlalchemy>=2.0.41",
]
