[project]
name = "s3py-client"
version = "0.1.0"
description = "A client library for accessing the s3py app"
readme = "README.md"
authors = [
    { name = "Benjamin Fovet", email = "b.fovet@gmail.com" }
]
requires-python = ">=3.12"
packages = [
    { include = "fast_api_app_client" },
]
include = ["CHANGELOG.md", "fast_api_app_client/py.typed"]
dependencies = [
    "httpx>=0.23.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
